# Drop-N

./: README.md  package-lock.json
api/: README.md  pyproject.toml
api/src/: database.db  main.py
api/src/db/: crud.py  database.py  models.py  schemas.py
ui/: package-lock.json  package.json  tsconfig.json
ui/src/: App.css  App.tsx
ui/src/components/: TopBar.tsx
ui/src/pages/: UserDashboard.tsx  events.tsx  landing-page.tsx  leagues.tsx  memberships.tsx  new-league.tsx  new-user.tsx  profile.tsx  purchases.tsx  user-dashboard.tsx
ui/src/types/: league-form-data.ts  user-info.ts
