[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["kylee <kyleetd@students.cs.ubc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
