[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["kylee <kyleetd@students.cs.ubc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
uvicorn = "^0.26.0"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
